--- a/assets/stylesheet/main.scss
+++ b/assets/stylesheet/main.scss
@@ -76,6 +76,8 @@
   line-height: 1;
   text-decoration: none;
 }
+
+//Hero
 .hero {
   background-image: url('/assets/images/hero_background.jpg');
   background-size: cover;
@@ -86,14 +88,37 @@
   height: 85vh;
   min-height: 310px;
   padding: 45px 0 30px 0;
+  position: relative;
 }
 .hero_headline {
 	@extend .headlineLargest;
 	@include textShadow();
 	color: $color-textSecondary;
 	text-align: center;
-    padding: 0 15px 0.3em 15px;
+  padding: 0 15px 0.3em 15px;
+  z-index: 3;
 }
+@keyframes move-clouds {
+  from {background-position:0 0;}
+  to {background-position:10000px 0;}
+}
+.clouds {
+  animation-name: move-clouds;
+  animation-duration: 200s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  position:absolute;
+  top:0;
+  left:0;
+  right:0;
+  bottom:0;
+  width:100%;
+  height:100%;
+  display:block;
+  background: transparent url('/assets/images/hero_clouds.png') repeat top center;
+  z-index: 2;
+}
+
 .section {
   display: flex;
   width: 100%;
@@ -169,16 +194,18 @@
   cursor: pointer;
   margin: 1em 0;
   padding: 1em;
+  text-decoration: none;
+  transition: 600ms;
 
   &:hover {
-    background-color: darken($color-accent, 5%);
+    background-color: darken($color-accent, 8%);
   }
 }
 .cta_button--secondary {
   background-color: $color-complement;
 
   &:hover {
-    background-color: darken($color-complement, 5%);
+    background-color: darken($color-complement, 8%);
   }
 }
 .flex_filler {
