--- a/assets/stylesheet/main.scss
+++ b/assets/stylesheet/main.scss
@@ -81,7 +81,7 @@
 .hero {
   background-image: url('/assets/images/hero_background.jpg');
   background-size: cover;
-  border-bottom: 3px solid #E76FA3;
+  border-bottom: 3px solid $color-accent;
   align-items: center;
   display: flex;
   justify-content: center;
@@ -125,6 +125,9 @@
 }
 
 //Presentation
+.section--description {
+  background-color: $color-sectionBackground;
+}
 .description {
   align-items: center;
   display: flex;
@@ -152,9 +155,6 @@
 }
 
 //CTAS
-.section--description {
-  background-color: $color-sectionBackground;
-}
 .cta-wrapper {
   display: flex;
   flex-direction: column;
