Jekyll didn't find css

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,6 @@
 
 <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed:300,400" rel="stylesheet">
 
-<link rel="stylesheet" href="{{ "/assets/stylesheet/main.css" | prepend: site.baseurl }}">
+<link rel="stylesheet" href="{{ '/assets/stylesheet/main.css' | prepend: site.baseurl }}">
 <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 </head>
