Northern Devs Week

--- a/assets/stylesheet/_modules/_colours.scss
+++ b/assets/stylesheet/_modules/_colours.scss
@@ -21,11 +21,17 @@
  $color-pageBg:				      $color-white;
  $color-headerBackground:    rgba(255,255,255,0.8);
  $color-sectionBackground:  $color-gallery;
+ $color-mainNavigationLink: $color-deepBlush;
 
  $color-accent:             $color-deepBlush;
  $color-complement:         $color-sulu;
  $color-divider:            $color-accent;
  $color-boxShadow:          $color-grey30;
+
+ $color-eventsDivider:      $color-grey30;
+
+ $color-announcementBackground: $color-accent;
+ $color-announcementText:       $color-white;
 
  $color-text:				        $color-woodsmoke;
  $color-textSecondary:      $color-white;
