--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="header">
   <div class="inner inner--header">
     <div class="logo">
-        <img class="logo_symbol" src="assets/images/site_logo.svg">
+        <img class="logo_symbol" src="{{site.baseurl}}/assets/images/site_logo.svg">
         <a class="logo_text" href="/">Northern Devs</a>
     </div>
     <nav class="mainNavigation">
@@ -15,9 +15,7 @@
           {% if link.url == '/index.html' %}
             {% assign link_url = '/'%}
           {% endif %}
-
           <li class="mainNavigation_item {{ current }}"><a class="mainNavigation_link" href="{{ link_url }}">{{ link.text }}</a></li>
-
         {% endfor %}
       </ul>
     </nav>
