Minor style fixes

--- a/assets/stylesheet/main.scss
+++ b/assets/stylesheet/main.scss
@@ -260,6 +260,7 @@
 .events {
   display: flex;
   flex-direction: column;
+  padding: 0 16px;
 }
 .event_item {
   border-bottom: 1px $color-eventsDivider solid;
