--- a/assets/stylesheet/main.scss
+++ b/assets/stylesheet/main.scss
@@ -164,6 +164,7 @@
 }
 .section--registration {
   justify-items: center;
+  padding: 2em 0;
 }
 .section--schedule {
   align-content: center;
@@ -257,6 +258,14 @@
 }
 
 //Week 42
+.registration_iframe {
+  width: 100%;
+  height: 600px;
+
+  @media(min-width: 600px) {
+    height: 1900px;
+  }
+}
 .events {
   display: flex;
   flex-direction: column;
@@ -284,6 +293,9 @@
 .event_name {
   @extend .headline_common;
   font-weight: bold;
+}
+.events_footer {
+  line-height: 1.9em;
 }
 
 .flex_filler {
