--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="header">
   <div class="inner inner--header">
     <div class="logo">
-        <img class="logo_symbol" src="{{site.baseurl}}/assets/images/site_logo.svg">
+        <img class="logo_symbol" src="{{ '/assets/images/site_logo.svg' | relative_url }}">
         <a class="logo_text" href="/">Northern Devs</a>
     </div>
     <nav class="mainNavigation">
