--- a/assets/stylesheet/_modules/_typography.scss
+++ b/assets/stylesheet/_modules/_typography.scss
@@ -54,3 +54,18 @@ $fontWeight-normal: 400;
 		font-size: 40px;
 	}
 }
+.headlineSmall
+{
+	@extend .headline_common;
+	font-size: 18px;
+
+	@media(min-width: 380px)
+	{
+		font-size: 5vw;
+	}
+
+	@media(min-width: 580px)
+	{
+		font-size: 30px;
+	}
+}
