--- a/assets/stylesheet/main.scss
+++ b/assets/stylesheet/main.scss
@@ -23,6 +23,16 @@
   position: relative;
 	@extend .font-text;
 }
+.headline {
+  @extend .headlineLarge;
+  margin-bottom: 0.7em;
+  text-align: center;
+}
+.headline_small {
+  @extend .headlineSmall;
+  margin-bottom: 0.7em;
+  text-align: center;
+}
 .link {
   border-bottom: 2px solid;
   text-decoration: none;
@@ -140,29 +150,7 @@
   display: flex;
   width: 100%;
 }
-.section--registration {
-  justify-items: center;
-  padding: 2em 0;
-}
-
-//Presentation
-.section--description {
-  background-color: $color-sectionBackground;
-}
-.description {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  min-height: 30vh;
-  padding: 30px 0;
-}
-.description_headline {
-  @extend .headlineLarge;
-  margin-bottom: 0.7em;
-  text-align: center;
-}
-.description_text {
+.section_description {
   font-family: 'Roboto Condensed';
   font-weight: 300;
   font-size: 24px;
@@ -173,6 +161,19 @@
   &:last-child {
       margin-bottom: 0;
   }
+}
+
+//Presentation
+.section--alternative {
+  background-color: $color-sectionBackground;
+}
+.description {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  min-height: 30vh;
+  padding: 30px 0;
 }
 
 //CTAS
@@ -228,6 +229,44 @@
   &:hover {
     background-color: darken($color-complement, 8%);
   }
+}
+
+// Companies
+.company_category {
+  margin-top: 1em;
+}
+.companies_wrapper {
+  display: grid;
+  grid-column-gap: 16px;
+  grid-row-gap: 16px;
+  grid-template-columns: 150px 150px;
+  grid-template-rows: 150px;
+
+  @media(min-width: 500px) {
+    grid-template-columns: 150px 150px 150px;
+  }
+  @media(min-width: 700px) {
+    grid-template-columns: 150px 150px 150px 150px;
+  }
+}
+.company {
+  align-items: center;
+  box-shadow: 0 0 1px 1px $color-boxShadow;
+  display: flex;
+  filter: grayscale(100%);
+  height: 150px;
+  justify-content: center;
+  transition-duration: 5s;
+  width: 150px;
+
+  &:hover {
+    box-shadow: 0 0 3px 4px $color-boxShadowActive;
+    filter: grayscale(0);
+    transition-duration: 0.5s;
+  }
+}
+.company_logo {
+  max-width: calc(150px - 16px);
 }
 
 .flex_filler {
