--- a/_includes/companies.html
+++ b/_includes/companies.html
@@ -2,7 +2,7 @@
   <div class="inner description">
     <h2 class="headline">Spana in de IT-företag som finns i Östersund.</h2>
     <h3 class="headline_small company_category">Konsultbolag</h3>
-    <p class="section_description">De bolag vi tycker bäst beskrivs som konsultbolag.</p>
+    <p class="section_description">De företag vi tycker bäst beskrivs som konsultbolag.</p>
     <div class="companies_wrapper">
       {% for company in site.companies.consultants %}
         <a {% if company.background %} style="background-color: {{ company.background }}" {% endif %} class="company" title="{{ company.name }}" href="{{ company.url }}">
@@ -11,7 +11,7 @@
       {% endfor %}
     </div>
     <h3 class="headline_small company_category">Produktbolag</h3>
-    <p class="section_description">De bolag vi tycker bäst beskrivs som produktbolag.</p>
+    <p class="section_description">De företag vi tycker bäst beskrivs som produktbolag.</p>
     <div class="companies_wrapper">
         {% for company in site.companies.product %}
           <a {% if company.background %} style="background-color: {{ company.background }}" {% endif %} class="company" title="{{ company.name }}" href="{{ company.url }}">
